# MusicBot

./: .gitignore  .pre-commit-config.yaml  README.md  check.sh  ci.sh  pyproject.toml
src/MusicBot/: bot.py
src/musicbot/: __init__.py  bot.py
tests/: test_bot.py
