[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "musicbot"
version = "0.0.0"
authors = [
  { name="CoolCat467" },
]
description = "Youtube audio streamer but discord bot"
readme = {file = "README.md", content-type = "text/markdown"}
license = {file = "LICENSE"}
requires-python = ">=3.8"
classifiers = [
    "Development Status :: 4 - Beta",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3 :: Only",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
keywords = ["discord", "bot", "music"]
dependencies = [
    "aiohttp==3.9.0b0",
    "discord.py~=2.3.2",
    "python-dotenv~=1.0.0",
    "httpx[http2]~=0.25.1",
    "asyncio-dgram~=2.1.2",
    "dnspython~=2.4.2",
    "yt-dlp~=2023.10.13",
    "PyNaCl~=1.5.0"
]

[project.urls]
"Homepage" = "https://github.com/CoolCat467/MusicBot"
"Source" = "https://github.com/CoolCat467/MusicBot"
"Bug Tracker" = "https://github.com/CoolCat467/MusicBot/issues"

[tool.setuptools.package-data]
musicbot = ["py.typed"]

[tool.pytest.ini_options]
addopts = "--cov-report term-missing --cov=musicbot"
testpaths = [
    "tests",
]

[tool.mypy]
mypy_path = "src"
check_untyped_defs = true
disallow_any_generics = true
disallow_untyped_calls = true
disallow_untyped_defs = true
ignore_missing_imports = true
no_implicit_optional = true
no_implicit_reexport = true
show_column_numbers = true
show_error_codes = true
show_traceback = true
strict = true
strict_equality = true
warn_redundant_casts = true
warn_return_any = true
warn_unreachable = true
warn_unused_configs = true
warn_unused_ignores = true

[tool.black]
line-length = 79
target-version = ['py312']

[tool.ruff.isort]
combine-as-imports = true

[tool.pycln]
all = true
disable_all_dunder_policy = true

include = ["*.py", "*.pyi", "**/pyproject.toml"]
select = [
    "A",  # flake8-builtins
    "ASYNC",  # flake8-async
    "B",  # flake8-bugbear
    "E",  # Error
    "F",  # pyflakes
    "I",  # isort
    "RUF",  # Ruff-specific rules
    "S",  # flake8-bandit
    "UP",  # pyupgrade
    "W",  # Warning
    "YTT",  # flake8-2020
    "TCH",  # flake8-type-checking
    "PYI",  # flake8-pyi
    "UP",  # pyupgrade
]
extend-ignore = [
    'E501',  # line-too-long
    "S101",  # use of assert for tests and type narrowing
    'PYI041',  # redundant-numeric-union
]

[tool.tox]
legacy_tox_ini = """
    [tox]
    envlist = py310, py311, py312, pytest, mypy
    isolated_build = false

    [gh-actions]
    python =
        3.10: py310, pytest
        3.11: py311, pytest
        3.12: py312, pytest, mypy

    [testenv]
    setenv =
        PYTHONPATH = {toxinidir}

    [testenv:pytest]
    deps =
        pytest
        pytest-cov
        pytest-trio
    commands = pytest --basetemp={envtmpdir}

    [testenv:mypy]
    deps =
        mypy
    commands = mypy src
"""
